[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yaotpbot"
description = "A telegram bot to generate OTPs"
authors = [
  { name="Olla Gabriele", email="ollagabriele@pm.me" },
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["telegram-bot", "otp"]
license = {text = "MIT"}
dependencies = [
    "python-telegram-bot ~= 13.13",
    "boto3 ~= 1.24.60",
    "pyotp ~= 2.6.0",
    "flake8 ~= 5.0.4",
    "cryptography == 3.3.2",
    "dynamodb-encryption-sdk ~= 3.1.0"
]
dynamic = ["version"]

[tool.setuptools]
py-modules = []

[project.scripts]
run-bot = "otpbot.main:main"
