[tool.poetry]
name = "yaotpbot"
version = "0.1.0"
description = "A telegram bot to generate OTPs"
authors = ["Olla Gabriele <dev@ollaw.xyz>"]
readme = "README.md"
keywords = ["telegram-bot", "otp"]
license = "MIT"
repository = "https://github.com/ollaw/yaotpbot"
documentation = "https://github.com/ollaw/yaotpbot/blob/main/README.md"
packages = [
    { include = "otpbot" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.4"
boto3 = "^1.24.60"
pyotp = "^2.6.0"
dynamodb-encryption-sdk = "^3.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.3.0"
flake8 = "^7.0.0"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
run-bot = "otpbot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
